--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>spring-pet-clinic</artifactId>
         <groupId>com.dangjogvara</groupId>
-        <version>0.0.2-SNAPSHOT</version>
+        <version>0.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -14,7 +14,7 @@
         <dependency>
             <artifactId>pet-clinic-data</artifactId>
             <groupId>com.dangjogvara</groupId>
-            <version>0.0.2-SNAPSHOT</version>
+            <version>0.0.1</version>
         </dependency>
 
         <dependency>
@@ -53,4 +53,8 @@
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
+
+    <scm>
+        <tag>pet-clinic-web-0.0.2</tag>
+    </scm>
 </project>
