--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>spring-pet-clinic</artifactId>
         <groupId>com.dangjogvara</groupId>
-        <version>0.0.1</version>
+        <version>0.0.2</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>pet-clinic-web</artifactId>
+  <version>0.0.1</version>
 
     <dependencies>
         <dependency>
@@ -55,6 +55,6 @@
 
 
     <scm>
-        <tag>pet-clinic-web-0.0.2</tag>
+        <tag>spring-pet-clinic-0.0.2</tag>
     </scm>
 </project>
