--- a/release.properties
+++ b/release.properties
@@ -1,22 +1,11 @@
 #release configuration
-#Sun Feb 21 16:08:32 WET 2021
+#Sun Feb 21 16:53:42 WET 2021
 projectVersionPolicyId=default
-project.rel.com.dangjogvara\:pet-clinic-data=0.0.1
-project.scm.com.dangjogvara\:spring-pet-clinic.tag=HEAD
+scm.tagNameFormat=@{project.artifactId}-@{project.version}
 remoteTagging=true
 scm.commentPrefix=[maven-release-plugin] 
-project.scm.com.dangjogvara\:pet-clinic-data.empty=true
-project.rel.com.dangjogvara\:pet-clinic-web=0.0.1
-project.scm.com.dangjogvara\:spring-pet-clinic.developerConnection=scm\:git\:git@github.com\:dangjogvara/spring-pet-clinic.git
-project.dev.com.dangjogvara\:pet-clinic-web=0.0.2-SNAPSHOT
-completedPhase=end-release
-scm.url=scm\:git\:git@github.com\:dangjogvara/spring-pet-clinic.git
-scm.tagNameFormat=@{project.artifactId}-@{project.version}
-project.scm.com.dangjogvara\:pet-clinic-web.empty=true
 pushChanges=true
-scm.tag=spring-pet-clinic-0.0.1
-project.dev.com.dangjogvara\:spring-pet-clinic=0.0.2-SNAPSHOT
-project.dev.com.dangjogvara\:pet-clinic-data=0.0.2-SNAPSHOT
+completedPhase=check-poms
+scm.url=scm\:git\:https\://github.com/dangjogvara/spring-pet-clinic.git
 exec.snapshotReleasePluginAllowed=false
 preparationGoals=clean verify
-project.rel.com.dangjogvara\:spring-pet-clinic=0.0.1
