--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -3,12 +3,12 @@
     <parent>
         <artifactId>spring-pet-clinic</artifactId>
         <groupId>com.dangjogvara</groupId>
-        <version>0.0.3</version>
+        <version>0.0.4-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>pet-clinic-web</artifactId>
-  <version>0.0.3</version>
+  <version>0.0.4-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
@@ -55,6 +55,6 @@
 
 
     <scm>
-        <tag>spring-pet-clinic-0.0.3</tag>
+        <tag>pet-clinic-web-0.0.2</tag>
     </scm>
 </project>
