--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,15 @@ Desktop.ini
 # ESLint
 ######################
 .eslintcache
+
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+# https://github.com/takari/maven-wrapper#usage-without-binary-jar
+.mvn/wrapper/maven-wrapper.jar
